--- a/06currencyConv/src/index.css
+++ b/06currencyConv/src/index.css
@@ -1,4 +1,6 @@
-:root {
+@import "tailwindcss";
+
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -23,10 +25,10 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  margin: 0; */
+  /* display: flex; */
+  /* place-items: center; */
+  /* min-width: 320px;
   min-height: 100vh;
 }
 
@@ -65,4 +67,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
